# development-guides

./: .dockerignore  .gitignore  CLAUDE.md  EMBODIMENT.md  LICENSE  MIND.md  README.md  SECURITY.md  SOUL.md  SPONSORS_CONTINUE_HERE.md  claude-desktop-mcp-configuration.md  claude-desktop-mcp-troubleshooting.md  general-development-setup.md  package-lock.json  package.json  quick-reference.md  r-package-development-best-practices.md  renv-setup-troubleshooting.md  wsl-rstudio-claude-integration.md
.github/: dependabot.yml
agents/: README.md  _registry.yml  _template.md  acp-developer.md  advocatus-diaboli.md  alchemist.md  apa-specialist.md  auditor.md  best-practices.md  blender-artist.md  chromatographer.md  (+59 more)
cli-rs/: Cargo.toml
cli-rs/examples/: dump_screens.rs
cli-rs/src/: app.rs  cli.rs  error.rs  event.rs  fire.rs  lib.rs  main.rs  manifest.rs  search.rs  state.rs  theme.rs
cli-rs/src/adapters/: ai_edge.rs  aider.rs  base.rs  claude_code.rs  codex.rs  copilot.rs  cursor.rs  edge_transformer.rs  gemini.rs  hermes.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs  symlink.rs  transformer.rs  universal.rs  vibe.rs  windsurf.rs
cli-rs/src/campfire/: mod.rs  state.rs
cli-rs/src/content/: body.rs  markdown.rs  mod.rs  registry.rs
cli-rs/src/pixels/: flame.rs  halfblock.rs  mod.rs
cli-rs/src/screens/: cover.rs  mod.rs  pages.rs  spellbook.rs
cli-rs/tests/: adapter.rs  cli_bundle.rs  cli_gather.rs  cli_init.rs  cli_install.rs  cli_scatter.rs  cli_search.rs  cli_sync.rs  cli_tend.rs  codex.rs  copilot.rs  gemini.rs  hermes.rs  opencode.rs  pi.rs  smoke.rs
(+1166 files in other folders)
