[package]
name = "agent-almanac-rs"
version = "2.0.0-alpha.16"
edition = "2021"
rust-version = "1.78"
authors = ["Philipp Thoss <ph.thoss@gmx.de>"]
description = "Interactive almanac of agentic skills, agents, teams, and guides — Rust port of the agent-almanac CLI"
license = "MIT"
repository = "https://github.com/pjt222/agent-almanac"
readme = "../README.md"
keywords = ["tui", "ratatui", "agents", "skills", "agentskills"]
categories = ["command-line-utilities"]

[[bin]]
name = "agent-almanac-rs"
path = "src/main.rs"

[lib]
name = "agent_almanac_rs"
path = "src/lib.rs"

[dependencies]
ratatui = { version = "0.29", default-features = true }
crossterm = "0.28"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
pulldown-cmark = { version = "0.12", default-features = false }
nucleo-matcher = "0.3"

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
